{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 15,
  "lineage": "6df64142-ae00-40d1-e0ea-2a2b9dea1249",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/networkInterfaces/nic-02-TFmach-shared-001",
            "internal_domain_name_suffix": "hw4lctvzy1ru5mh5d2vypya30e.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-002/subnets/snet--shared-EastUs-002"
              }
            ],
            "location": "eastus",
            "name": "nic-02-TFmach-shared-001",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "test-Terraform-rg-EastUS-002"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/networkInterfaces/nic-01-Terra-shared-001",
            "internal_domain_name_suffix": "nhn5j0oooofu3noz31e4itkcvg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-001/subnets/snet-shared-EastUs-001"
              }
            ],
            "location": "eastus",
            "name": "nic-01-Terra-shared-001",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "test-Terraform-rg-EastUS-002"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.Vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/networkSecurityGroups/nsg-Networksecuritygroup-001",
            "location": "eastus",
            "name": "nsg-Networksecuritygroup-001",
            "resource_group_name": "test-Terraform-rg-EastUS-002",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/networkSecurityGroups/nsg-Networksecuritygroup-001/securityRules/blockHTTP",
            "name": "blockHTTP",
            "network_security_group_name": "nsg-Networksecuritygroup-001",
            "priority": 1051,
            "protocol": "Tcp",
            "resource_group_name": "test-Terraform-rg-EastUS-002",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-001/subnets/snet-shared-EastUs-001",
            "name": "snet-shared-EastUs-001",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-Terraform-rg-EastUS-002",
            "virtual_network_name": "vnet-shared-EastUS-001"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.Vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-002/subnets/snet--shared-EastUs-002",
            "name": "snet--shared-EastUs-002",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-Terraform-rg-EastUS-002",
            "virtual_network_name": "vnet-shared-EastUS-002"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-001/subnets/snet-shared-EastUs-001",
            "network_security_group_id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/networkSecurityGroups/nsg-Networksecuritygroup-001",
            "subnet_id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-001/subnets/snet-shared-EastUs-001"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.Vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-002/subnets/snet--shared-EastUs-002",
            "network_security_group_id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/networkSecurityGroups/nsg-Networksecuritygroup-001",
            "subnet_id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-002/subnets/snet--shared-EastUs-002"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG",
            "azurerm_resource_group.RG",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.VN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4eb1bc3d-c6b9-4fe3-b0ff-1f2b87e01dd4",
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-002",
            "location": "eastus",
            "name": "vnet-shared-EastUS-002",
            "resource_group_name": "test-Terraform-rg-EastUS-002"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e9f4db69-73ce-4e8b-b5d9-eec9e44d42ae",
            "id": "/subscriptions/88648323-8d67-4f00-b3d0-d648cbfefa22/resourceGroups/test-Terraform-rg-EastUS-002/providers/Microsoft.Network/virtualNetworks/vnet-shared-EastUS-001",
            "location": "eastus",
            "name": "vnet-shared-EastUS-001",
            "resource_group_name": "test-Terraform-rg-EastUS-002"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}